fix: Update configurations for proper Docker networking
- Update Dockerfile to use latest Rust version (edition2024 support)
- Fix docker-compose.yml with correct PostgreSQL credentials
- Fix docker-compose.yml to use correct baram network name
- Update nginx.conf with Docker DNS resolver for dynamic upstreams
- Simplify dashboard nginx configs (remove proxy configurations)
- Fix healthcheck endpoint path for news-api

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,15 +12,9 @@ services:
     environment:
       - NODE_ENV=${NODE_ENV:-production}
       - PORT=8080
-      - POSTGRES_HOST=${POSTGRES_HOST:-baram-postgres}
-      - POSTGRES_PORT=${POSTGRES_PORT:-5432}
-      - POSTGRES_DB=${POSTGRES_DB:-barami}
-      - POSTGRES_USER=${POSTGRES_USER:-barami}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - OPENSEARCH_HOST=${OPENSEARCH_HOST:-baram-opensearch}
-      - OPENSEARCH_PORT=${OPENSEARCH_PORT:-9200}
-      - OPENSEARCH_USERNAME=${OPENSEARCH_USERNAME:-admin}
-      - OPENSEARCH_PASSWORD=${OPENSEARCH_PASSWORD}
+      - DATABASE_URL=postgres://baram:changeme_use_strong_password@baram-postgres:5432/baram
+      - OPENSEARCH_URL=http://baram-opensearch:9200
+      - OPENSEARCH_INDEX=baram-articles
       - LOG_LEVEL=${LOG_LEVEL:-info}
       - CORS_ORIGIN=${CORS_ORIGIN:-*}
     networks:
@@ -28,7 +22,7 @@ services:
       - baram
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:8080/api/health"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -131,3 +125,4 @@ networks:
     name: barami-network
   baram:
     external: true
+    name: baram_baram-network
