--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -26,6 +26,9 @@ http {
     types_hash_max_size 2048;
     client_max_body_size 20M;
 
+    # Docker DNS resolver
+    resolver 127.0.0.11 valid=30s ipv6=off;
+
     # Gzip compression
     gzip on;
     gzip_vary on;
@@ -39,32 +42,6 @@ http {
     # Rate limiting
     limit_req_zone $binary_remote_addr zone=api_limit:10m rate=10r/s;
     limit_req_zone $binary_remote_addr zone=general_limit:10m rate=50r/s;
-
-    # Upstream definitions
-    upstream news_api {
-        server news-api:8080 max_fails=3 fail_timeout=30s;
-        keepalive 32;
-    }
-
-    upstream news_dashboard {
-        server news-dashboard:80 max_fails=3 fail_timeout=30s;
-        keepalive 32;
-    }
-
-    upstream admin_dashboard {
-        server admin-dashboard:80 max_fails=3 fail_timeout=30s;
-        keepalive 32;
-    }
-
-    upstream grafana {
-        server baram-grafana:3000 max_fails=3 fail_timeout=30s;
-        keepalive 32;
-    }
-
-    upstream prometheus {
-        server baram-prometheus:9090 max_fails=3 fail_timeout=30s;
-        keepalive 32;
-    }
 
     # Main server block
     server {
@@ -83,22 +60,12 @@ http {
         add_header Access-Control-Allow-Headers "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization" always;
         add_header Access-Control-Expose-Headers "Content-Length,Content-Range" always;
 
-        # Handle preflight requests
-        if ($request_method = 'OPTIONS') {
-            add_header Access-Control-Allow-Origin "*";
-            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS";
-            add_header Access-Control-Allow-Headers "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization";
-            add_header Access-Control-Max-Age 1728000;
-            add_header Content-Type 'text/plain; charset=utf-8';
-            add_header Content-Length 0;
-            return 204;
-        }
-
         # API endpoints
         location /api {
             limit_req zone=api_limit burst=20 nodelay;
 
-            proxy_pass http://news_api;
+            set $upstream_api barami-news-api:8080;
+            proxy_pass http://$upstream_api;
             proxy_http_version 1.1;
 
             proxy_set_header Host $host;
@@ -131,7 +98,8 @@ http {
         location /admin {
             limit_req zone=general_limit burst=50 nodelay;
 
-            proxy_pass http://admin_dashboard;
+            set $upstream_admin barami-admin-dashboard:80;
+            proxy_pass http://$upstream_admin;
             proxy_http_version 1.1;
 
             proxy_set_header Host $host;
@@ -156,7 +124,8 @@ http {
         location /grafana/ {
             rewrite ^/grafana/(.*) /$1 break;
 
-            proxy_pass http://grafana;
+            set $upstream_grafana baram-grafana:3000;
+            proxy_pass http://$upstream_grafana;
             proxy_http_version 1.1;
 
             proxy_set_header Host $host;
@@ -184,7 +153,8 @@ http {
         location /grafana/api/live/ {
             rewrite ^/grafana/(.*) /$1 break;
 
-            proxy_pass http://grafana;
+            set $upstream_grafana baram-grafana:3000;
+            proxy_pass http://$upstream_grafana;
             proxy_http_version 1.1;
 
             proxy_set_header Upgrade $http_upgrade;
@@ -200,7 +170,8 @@ http {
         location /prometheus/ {
             rewrite ^/prometheus/(.*) /$1 break;
 
-            proxy_pass http://prometheus;
+            set $upstream_prometheus baram-prometheus:9090;
+            proxy_pass http://$upstream_prometheus;
             proxy_http_version 1.1;
 
             proxy_set_header Host $host;
@@ -221,7 +192,8 @@ http {
         location / {
             limit_req zone=general_limit burst=50 nodelay;
 
-            proxy_pass http://news_dashboard;
+            set $upstream_dashboard barami-news-dashboard:80;
+            proxy_pass http://$upstream_dashboard;
             proxy_http_version 1.1;
 
             proxy_set_header Host $host;
@@ -246,7 +218,6 @@ http {
         location /nginx-health {
             access_log off;
             return 200 "healthy\n";
-            add_header Content-Type text/plain;
         }
     }
 }
