feat: Connect dashboard to real-time OpenSearch data
- Add track_total_hits: true to all OpenSearch queries (fixes 10,000 cap)
- Add get_dashboard_stats() with aggregation queries for categories,
  publishers, hourly/daily collection trends
- Update /api/stats response to match dashboard frontend contract:
  total_articles, today_articles, categories, publishers, hourly_counts, daily_counts
- Add /api/status endpoint with DB health, LLM status, disk usage, uptime
- Fix Dockerfile: rust:latest → rust:1-bookworm for glibc compatibility

--- a/services/news-api/Dockerfile
+++ b/services/news-api/Dockerfile
@@ -1,6 +1,6 @@
 # Multi-stage build for News API service
 # Stage 1: Builder
-FROM rust:latest AS builder
+FROM rust:1-bookworm AS builder
 
 # Install dependencies
 RUN apt-get update && apt-get install -y \
